bk_ida/gccida/c1/dw2_asm_output_delta
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/dw2_asm_output_delta/src/dwarf2asm.c:572:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v15; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/dw2_asm_output_delta/src/dwarf2asm.c:605:36: error: use of undeclared identifier 'machine_mode'
v17 = gen_rtx_fmt_s( SYMBOL_REF, ( machine_mode)( ( ( target_flags & 0x2000000 | 0x500000000uLL) - 1) >> 32), lab2); 
                                   ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/dw2_asm_output_delta/src/obj/dwarf2asm.o] Error 1
